--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -95,8 +95,7 @@
                   <div class="price__current">7990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -117,8 +116,7 @@
                   <div class="price__current">6990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -141,8 +139,7 @@
                   <div class="price__current">7490 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -166,8 +163,7 @@
                   <div class="price__current">8990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -191,8 +187,7 @@
                   <div class="price__current">5990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -216,8 +211,7 @@
                   <div class="price__current">7990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
@@ -233,8 +227,7 @@
                 <div class="product__title">KidPhone 4GR</div>
                 <div class="product__desc">Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками</div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn product__preorder" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
+                  <button class="btn btn--border-accent product__btn" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
                 </div>
               </div>
             </div>
@@ -255,8 +248,7 @@
                   <div class="price__current">3990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее</div>
-                  <button class="btn product__preorder" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
+                  <button class="btn btn--border-accent product__btn" data-modal="modal-preorder" aria-label="Open modal">Предзаказ</button>
                 </div>
               </div>
             </div>
@@ -276,8 +268,7 @@
                   <div class="price__current">3990 р</div>
                 </div>
                 <div class="product__nav">
-                  <div class="btn btn--border-accent product__btn">Подробнее </div>
-                  <button class="btn btn--reset btn--cart product__cart" aria-label="Add cart"></button>
+                  <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
                 </div>
               </div>
             </div>
