product card page

--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -327,6 +327,7 @@
     </div>
     <script src="libs/swiper/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/product-card.js"></script>
     <script>
       if (CSS && 'paintWorklet' in CSS) CSS.paintWorklet.addModule('scripts/paint.js');
       
