--- a/dest/index.html
+++ b/dest/index.html
@@ -170,8 +170,6 @@
       </section>
       <section class="section">
         <div class="home-watch">
-          <div class="home-watch__caption">Смарт-часы для</div>
-          <div class="home-watch__title">Жизни <span>и спорта.</span></div>
           <div class="home-watch__img--wrap">
             <picture>
               <source srcset="img/content/home-watch/desktop.png" media="(min-width: 580px)"><img src="img/content/home-watch/mobile.png" width="343" height="748" alt="Watch image">
@@ -511,6 +509,7 @@
     </div>
     <script src="libs/swiper/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/product-card.js"></script>
     <script>
       if (CSS && 'paintWorklet' in CSS) CSS.paintWorklet.addModule('scripts/paint.js');
       
