--- a/dest/p-card.html
+++ b/dest/p-card.html
@@ -382,141 +382,17 @@
               </div>
             </div>
           </div>
-          <div class="recommended product-card__recommended">
-            <div class="recommended__head">
-              <h2 class="recommended__title">Вам также может понравиться</h2>
-            </div>
-            <div class="slider-wrapper">
-              <div class="recommended__slider">
-                <div class="swiper-wrapper">
-                  <div class="product">
-                    <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-                      <div class="product__labels">
-                        <div class="product__labels-item -purple-">Новинка</div>
-                        <div class="product__labels-item -green-">Хит продаж</div>
-                      </div>
-                      <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
-                        <ul class="product__colors-list">
-                          <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
-                        </ul>
-                      </div>
-                      <div class="product__info">
-                        <div class="product__title">KidGram Watch</div>
-                        <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
-                        <div class="product__price price">
-                          <div class="price__current">7990 р</div>
-                        </div>
-                        <div class="product__nav">
-                          <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="product">
-                    <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-                      <div class="product__labels">
-                        <div class="product__labels-item -purple-">Новинка</div>
-                        <div class="product__labels-item -green-">Хит продаж</div>
-                      </div>
-                      <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
-                        <ul class="product__colors-list">
-                          <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
-                        </ul>
-                      </div>
-                      <div class="product__info">
-                        <div class="product__title">KidGram Watch</div>
-                        <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
-                        <div class="product__price price">
-                          <div class="price__current">7990 р</div>
-                        </div>
-                        <div class="product__nav">
-                          <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="product">
-                    <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-                      <div class="product__labels">
-                        <div class="product__labels-item -purple-">Новинка</div>
-                        <div class="product__labels-item -green-">Хит продаж</div>
-                      </div>
-                      <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
-                        <ul class="product__colors-list">
-                          <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
-                        </ul>
-                      </div>
-                      <div class="product__info">
-                        <div class="product__title">KidGram Watch</div>
-                        <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
-                        <div class="product__price price">
-                          <div class="price__current">7990 р</div>
-                        </div>
-                        <div class="product__nav">
-                          <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="product">
-                    <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-                      <div class="product__labels">
-                        <div class="product__labels-item -purple-">Новинка</div>
-                        <div class="product__labels-item -green-">Хит продаж</div>
-                      </div>
-                      <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
-                        <ul class="product__colors-list">
-                          <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
-                        </ul>
-                      </div>
-                      <div class="product__info">
-                        <div class="product__title">KidGram Watch</div>
-                        <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
-                        <div class="product__price price">
-                          <div class="price__current">7990 р</div>
-                        </div>
-                        <div class="product__nav">
-                          <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="product">
-                    <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-                      <div class="product__labels">
-                        <div class="product__labels-item -purple-">Новинка</div>
-                        <div class="product__labels-item -green-">Хит продаж</div>
-                      </div>
-                      <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
-                        <ul class="product__colors-list">
-                          <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
-                          <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
-                        </ul>
-                      </div>
-                      <div class="product__info">
-                        <div class="product__title">KidGram Watch</div>
-                        <div class="product__desc">Новые и самые доступные часы ELARI на Android 8.1 , со всем расширенным функционалом ELARI и партнеров</div>
-                        <div class="product__price price">
-                          <div class="price__current">7990 р</div>
-                        </div>
-                        <div class="product__nav">
-                          <button class="btn btn--border-accent product__btn" aria-label="Add cart">Добавить в корзину</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+          <div class="product-card__also-like">
+            <h2>Вам также может понравиться</h2>
+            <div><a class="product-card__also-like--item" href="p-card.html">
+                <div><img alt="KidPhone 2" src="img/content/p-card/also-like/card_0.jpg"></div>
+                <p>KidPhone 2</p></a><a class="product-card__also-like--item" href="p-card.html">
+                <div><img alt="KidPhone 2" src="img/content/p-card/also-like/card_1.png"></div>
+                <p>Kidphone 4GR M</p></a><a class="product-card__also-like--item" href="p-card.html">
+                <div><img alt="KidPhone 2" src="img/content/p-card/also-like/card_2.jpg"></div>
+                <p>KidPhone 4G Lite</p></a><a class="product-card__also-like--item" href="p-card.html">
+                <div><img alt="KidPhone 2" src="img/content/p-card/also-like/card_3.jpg"></div>
+                <p>GamePhone</p></a></div>
           </div>
         </div>
       </div>
