styles for popup-window

--- a/dest/catalog.html
+++ b/dest/catalog.html
@@ -81,7 +81,7 @@
                 <div class="product__labels-item -purple-">Новинка</div>
                 <div class="product__labels-item -green-">Хит продаж</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_0.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/pink.jpg');"></li>
@@ -102,7 +102,7 @@
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_1.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
@@ -126,7 +126,7 @@
               <div class="product__labels">
                 <div class="product__labels-item -purple-">Новинка</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_2.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue.jpg');"></li>
@@ -150,7 +150,7 @@
                 <div class="product__labels-item -purple-">Новинка</div>
                 <div class="product__labels-item -green-">Хит продаж</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_3.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/purple.jpg');"></li>
@@ -174,7 +174,7 @@
                 <div class="product__labels-item -purple-">Новинка</div>
                 <div class="product__labels-item -blue-">Рекомендуем</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_4.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
@@ -197,7 +197,7 @@
               <div class="product__labels">
                 <div class="product__labels-item -purple-">Новинка</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_5.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/yellow.jpg');"></li>
@@ -222,7 +222,7 @@
                 <div class="product__labels-item -purple-">Новинка</div>
                 <div class="product__labels-item -green-">Хит продаж</div>
               </div>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product"></div>
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_6.png" width="213" height="213" alt="Name product"></a></div>
               <div class="product__info">
                 <div class="product__title">KidPhone 4GR</div>
                 <div class="product__desc">Водонепроницаемые 4G часы-телефон с GPS/Wi-Fi-трекингом, MP3-плеером, Алисой от Яндекса и видеозвонками</div>
@@ -234,7 +234,7 @@
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_7.png" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/green.jpg');"></li>
@@ -255,7 +255,7 @@
           </div>
           <div class="product">
             <div class="product__body"><a class="product__link" href="p-card.html" title="Go to product"></a>
-              <div class="product__img--wrap" style="background: #F0EEF7"><img class="product__img" src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product">
+              <div class="product__img--wrap" style="background: #F0EEF7"><a href="p-card.html" title="Go to product"><img class="product__img" src="img/content/catalog/product_8.webp" width="213" height="213" alt="Name product"></a>
                 <ul class="product__colors-list">
                   <li class="product__colors-item product__colors-item--active" style="background-image: url('img/content/product-colors/pink-black.jpg');"></li>
                   <li class="product__colors-item" style="background-image: url('img/content/product-colors/blue-black.jpg');"></li>
