--- a/dest/p-card.html
+++ b/dest/p-card.html
@@ -71,11 +71,19 @@
             <div class="button-next"></div>
             <div class="button-prev"></div>
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_0.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_1.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_2.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_3.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_4.png"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_0.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_1.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_2.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_3.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_4.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_5.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_6.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_7.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_8.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_9.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_10.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_11.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_12.jpg"></div>
             </div>
           </div>
           <div class="swiper product-card__swiper-side">
@@ -104,11 +112,19 @@
             <div class="button-next"></div>
             <div class="button-prev"></div>
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_0.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_1.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_2.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_3.png"></div>
-              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_4.png"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_0.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_1.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_2.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_3.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_4.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_5.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_6.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_7.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_8.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_9.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_10.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_11.jpg"></div>
+              <div class="swiper-slide"><img src="img/content/p-card/slider_0/slide_12.jpg"></div>
             </div>
           </div>
           <div class="swiper product-card__swiper-main">
